tests/vendor/valid/trivial/negate_zero.c
//expect 0
//tags: trivial, unary
int main() {
    return -0;
}