tests/vendor/invalid/semantics/undeclared_postfix_decr.c
//tags: simple, decrement
int main() {
    a--;
    return 0;
}